# ai-summarizer

./: README.md  main.py  pyproject.toml  requirements.txt
frontend/: index.html  style.css  summarizer.html
