[project]
name = "article-sumaarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.41.0",
    "uvicorn>=0.42.0",
    "webdriver-manager>=4.0.2",
    "youtube-transcript-api>=1.2.4",
]
